Fixed some of the CSS on the spacing homepage and the login forms.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -11005,9 +11005,9 @@ hr {
   opacity: 1;
 }
 
-p {
+/* p {
   margin: 2rem 0;
-}
+} */
 p a {
   text-decoration: underline;
 }
