--- a/public/css/style2.css
+++ b/public/css/style2.css
@@ -12,3 +12,45 @@
     color: #065b83;
     text-decoration: underline;
   }
+
+  .signin-page {
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+    border-radius: 5px;
+    /* background-color: #f2f2f2; */
+    padding: 20px;
+  }
+
+  .form-container {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: flex;
+    flex-direction: column;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+  }
+  .form-group {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+  .submit-btn {
+    width: 100%;
+    background-color: #04AA6D;
+    color: white;
+    padding: 14px 20px;
+    margin: 8px 0;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+  }
+  
+  .submit-btn:hover {
+    background-color: #45a049;
+  }
+  
+
+
